add strategy-factory pattern

--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,8 @@
 
     <modules>
         <module>spring-observer</module>
+        <module>strategy-factory</module>
     </modules>
-
-
 
 
 </project>
