--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,13 @@
         <module>strategy-factory</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.72</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
