--- a/demo-guava-cache/pom.xml
+++ b/demo-guava-cache/pom.xml
@@ -47,6 +47,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
